app2/deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app2
  labels:
    istio-injection: enabled
