app2/deployment/app_v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-v1
  namespace: app2
  labels:
    app: app2
    version: v1
spec:
    replicas: 1
    selector:
      matchLabels:
        app: app2
        version: v1
    template:
        metadata:
            labels:
                app: app2
                version: v1
        spec:
            containers:
            - name: app2
              image: app2:1.0.0
              ports:
              - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-v2
  namespace: app2
  labels:
    app: app2
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
      version: v2
  template:
    metadata:
      labels:
        app: app2
        version: v2
    spec:
      containers:
        - name: app2
          image: app2:2.0.0
          ports:
            - containerPort: 8080
