app2/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2
  namespace: app2
  labels:
    app: app2
spec:
    selector:
        app: app2
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8080
