app2/deployment/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app2
  namespace: app2
spec:
    hosts:
    - app2.example.com
    gateways:
    - app2-gateway
    http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: app2
          port:
            number: 80
