app2/deployment/virtualservice_v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app2
  namespace: app2
spec:
    hosts:
    - app2.example.com
    gateways:
    - app2-gateway
    http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: app2.app2.svc.cluster.local # dns interno de la aplicacion dentro de cluster
          subset: v1
          port:
            number: 80
        weight: 80
      - destination:
          host: app2.app2.svc.cluster.local # dns interno de la aplicacion dentro de cluster
          subset: v2
          port:
            number: 80
        weight: 20
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app2
  namespace: app2
spec:
  host: app2.app2.svc.cluster.local # dns interno de la aplicacion dentro de cluster
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
